devel
-----

* Add API for deployment ID: /_admin/deployment/id .

* Add vertex collections for graph queries using edge collection syntax
  from named graphs. This means that if a query uses edge collection syntax
  and a named graph defines the from and to vertex collections for that edge
  collection, the WITH statement is no longer required.

* Add filtering support for vector index queries. Filter conditions can now be
  pushed down into vector similarity searches, enabling filtering with vector index by
  evaluating filters during the index scan rather than as a post-processing step.

* Upgraded OpenSSL to 3.5.4.

* Fix BTS-2203: Fix part of it by introducing memory supervision to COLLECT 

* Fix BTS-2203: Fix part of it by introducing memory supervision to MERGE
  instructions in query runtime.

* Fix BTS-2130: Fix the endless wait in Coordinators during
  CreateDatabase and CreateCollection.

* Fix ES-2678: In the upgrade scenario, we disable the ClusterFeature.
  We should therefore check before accessing clusterInfo() whether we're
  in an upgrade scenario. Added those checks in iresearch.

* Reverted RocksDB defaults for maximum wal size, number of sub
  compactions and compaction read ahead to stay close to established
  behaviour.

* Fix BTS-2214: In a rare hash collision situation it can happen that a
  valid edge in an enterprise graph fails to validate and is rejected.

* Fix BTS-2216: Fix a possible use-after-free. It can occur when a query is
  killed at the end of being prepared. Only non-streaming cursors in a cluster
  are affected.

* Fix BTS-2211: AQL queries using the async-prefetch rule, which result in a
  failure due to a runtime exception or possibly a kill, had a possible race
  during query destruction that could result in undefined behavior (e.g.
  memory leaks or crashes).

* Fix BTS-2213: Adds a retry logic to the UserManager::updateUser to retry in certain situations 